# git-anger-management

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pipeline.yml
lib/: Cargo.toml  README.md
lib/src/: author.rs  core.rs  lib.rs  repo.rs  words.rs
lib/tests/: repo_tests.rs
server/: Cargo.toml
server/src/: main.rs
src/: author.rs  bin.rs  core.rs  curse.rs  lib.rs  main.rs  output.rs  repo.rs  words.txt
tests/: repo_tests.rs  version-numbers.rs
