[package]
name = "git-anger-management"
version = "0.5.1"
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
description = "Count your naughty words in git commit messages"
repository = "https://github.com/sondr3/git-anger-management"
documentation = "https://docs.rs/crate/git-anger-management/"
homepage = "https://github.com/sondr3/git-anger-management"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["git", "useless", "fun", "anger-management"]
categories = ["command-line-utilities"]

[[bin]]
name = "git-anger-management"
path = "src/bin.rs"

[profile.release]
lto = "thin"

[features]
fail-on-warnings = []

[dependencies]
git2 = "0.7"
structopt = "0.2"
hashbrown = "0.1"
lazy_static = "1.2"
indicatif = "0.11"
