[package]
name = "git-anger-management"
version = "0.6.0"
edition = "2018"
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
description = "Count your naughty words in git commit messages"
repository = "https://github.com/sondr3/git-anger-management"
documentation = "https://docs.rs/crate/git-anger-management/"
homepage = "https://github.com/sondr3/git-anger-management"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["git", "useless", "fun", "anger-management"]
categories = ["command-line-utilities"]

[[bin]]
name = "git-anger-management"
path = "src/bin.rs"

[profile.release]
lto = "thin"

[features]
fail-on-warnings = []

[dependencies]
structopt = "0.3"
lazy_static = "1.4"
indicatif = "0.12"
prettytable-rs = "0.8"

[dependencies.git2]
version = "0.10.1"
default-features = false