[package]
name = "git-anger-management"
version = "0.7.0"
edition = "2018"
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
description = "Count your naughty words in git commit messages"
repository = "https://github.com/sondr3/git-anger-management"
documentation = "https://docs.rs/crate/git-anger-management/"
homepage = "https://github.com/sondr3/git-anger-management"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["git", "useless", "fun", "anger-management"]
categories = ["command-line-utilities"]

[[bin]]
name = "git-anger-management"
path = "src/bin/main.rs"

[profile.release]
lto = "thin"

[dependencies]
structopt = "0.3.14"
once_cell = "1.3.1"
git2 = { version = "0.13.5", default-features = false }
console = "0.11.2"

tabwriter = { version = "1.2.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["json", "table"]
json = ["serde", "serde_json"]
table = ["tabwriter"]