[package]
name = "git-anger-library"
version = "0.8.1"
edition = "2024"
authors = ["Sondre Aasemoen <sondre@eons.io>"]
description = "Count your naughty words in git commit messages"
repository = "https://github.com/sondr3/git-anger-management"
documentation = "https://docs.rs/crate/git-anger-library/"
homepage = "https://github.com/sondr3/git-anger-management"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["git", "useless", "fun", "anger-management"]

[dependencies]
git2 = { version = "0.14.4", default-features = false }

tabwriter = { version = "1.2.1", optional = true }
serde = { version = "1.0.138", features = ["derive"], optional = true }
serde_json = { version = "1.0.82", optional = true }
phf = { version = "0.12.1", features = ["macros"] }

[features]
default = []
json = ["serde", "serde_json"]
table = ["tabwriter"]

[package.metadata.docs.rs]
features = [ "json", "table" ]
