[package]
name = "git-anger-library"
version = "0.8.1"
edition = "2024"
authors = ["Sondre Aasemoen <sondre@eons.io>"]
description = "Count your naughty words in git commit messages"
repository = "https://github.com/sondr3/git-anger-management"
documentation = "https://docs.rs/crate/git-anger-library/"
homepage = "https://github.com/sondr3/git-anger-management"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["git", "useless", "fun", "anger-management"]

[dependencies]
git2 = { version = "0.20.2", default-features = false, features = ["vendored-libgit2"] }
serde = { version = "1.0.219", features = ["derive"], optional = true }
phf = { version = "0.12.1", features = ["macros"] }

[features]
default = []

[package.metadata.docs.rs]
features = [ "serde" ]
