[package]
name = "git-anger-server"
version = "0.0.0"
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
envy = "0.4"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
uuid = "0.8"
warp = "0.2"
